# hirm-research

./: .gitignore  CHANGELOG.md  CITATION.cff  CLEANUP_SUMMARY.md  DEVELOPER_NOTES.md  DEV_NOTES.md  PHASE9_STATUS.md  README.md  README_phase8.md  RUNS.md  app.py  pyproject.toml  pytest.ini  requirements-colab.txt  requirements.txt  webui_utils.py
analysis/: analyze_ablation.py  phase9_analysis.py
configs/: base.yaml
docs/: config_format.md  design_history.md  developer_notes.md  diagnostics_overview.md  phase6_diagnostics.md
hirm/: engine.py
notebooks/: colab_test_runner.ipynb  hirm_phase9_colab.ipynb  hirm_phase9_reduced.ipynb  hirm_tiny_demo.ipynb  performance_evaluation.ipynb  phase8_colab_example.ipynb
numpy/: __init__.py
scripts/: check_baseline_integrity.py  check_phase7_integrity.py  demo_objectives.py  run_ablation_grid.py  run_ablation_study.py  run_baseline_benchmark.py  run_diagnostics.py  run_experiment.py  run_experiment_and_diagnostics.py  run_experiment_grid.py  run_full_experiment_suite.py  run_grid.py  run_objective_demo.py  run_smoke_benchmark.py  run_smoke_test.py  run_tiny_experiment.py  summarize_baseline_results.py  summarize_diagnostics.py  summarize_phase7_results.py
tests/: test_ablation_study_smoke.py  test_baseline_benchmark_smoke.py  test_config.py  test_config_lists.py  test_cvar.py  test_diagnostics_crisis.py  test_diagnostics_efficiency.py  test_diagnostics_end_to_end.py  test_diagnostics_invariance.py  test_diagnostics_reporting.py  test_diagnostics_robustness.py  test_envs.py  test_episodes.py  test_full_suite_config.py  (+22 more)
(+114 files in other folders)
