[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hirm"
version = "0.1.0"
description = "Hedging Invariant Risk Minimization research codebase"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "HIRM authors" }]

[tool.setuptools.packages.find]
include = ["hirm", "hirm.*"]
