[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hirm"
version = "0.1.0"
description = "Hedging Invariant Risk Minimization research codebase"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [{ name = "HIRM authors" }]
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchaudio==2.4.1",
    "pytest>=8.0",
    "pytest-xdist>=3.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hirm", "hirm.*"]
